# nest-simulator

./: .gdb_history  .gitignore  CMakeLists.txt  build_script.sh  minimal_test.py  minimal_test_src_trg.py
examples/matplotlib/: fontlist-v330.json
fastconn/: CMakeLists.txt  fastconn copy.cpp  fastconn.cpp
nestkernel/: connection_manager.cpp  node_collection.cpp  target_table_devices.cpp
pynest/: CMakeLists.txt  pynestkernel.pxd  pynestkernel.pyx
pynest/nest/lib/: hl_api_types.py
